# Mutexa

./: .gitignore  pyproject.toml  readme.md  requirements.txt
examples/: metadata.csv  mutation.csv  refSeq.fasta  seqs.fasta
inputs/: CDC_class.csv  UNSD — Methodology.csv
inputs/.ipynb_checkpoints/: gisaid_hcov-19_2022_07_19_05-checkpoint.csv  testMut-checkpoint.csv  testMut-checkpoint.json
scripts/: make_publishable_plots.ipynb  paper_plots.ipynb
src/: check_format.py  extract_mutations.py  merge_meta.py  mutexa  pipeline.sh  rollingAvePlots.py
src/mutexa/: check_format.py  cli.py  extract_mutations.py  merge_meta.py  rollingAvePlots.py
